examples/should-fail/case-unknown-element/pages/index.nono
component X {
  Frobnicate { "this component does not exist" }
}
